# cmux-aim-hackathon

./: README.md  app.py  clean_err.txt  clean_output.txt  download_datasets.py  eval_pipeline.py  extract_balanced.py  main.py  pitch_deck.md  prompt_injection_scanner_design.md  pyproject.toml  run_test_100.py  sumit.md  test_image.py  test_pipeline.py
core/: preprocessor.py  scanner.py
data/: jailbreak_samples.json  neuralchemy_balanced_100.json  neuralchemy_full.json  neuralchemy_samples.json  test_results.json
